force-app/main/default/objects/Google_Drive_Integration_Settings__c/Google_Drive_Integration_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Google Drive Integration Settings</label>
</CustomObject>