force-app/main/default/objects/Google_Drive_Integration_Settings__c/fields/Access_Token_Expires__c.field-meta.xml
<CustomField>
    <fullName>Access_Token_Expires__c</fullName>
    <label>Access Token Expires</label>
    <type>DateTime</type>
</CustomField>