force-app/main/default/objects/Google_Drive_Integration_Settings__c/fields/Administrator_Email__c.field-meta.xml
<CustomField>
    <fullName>Administrator_Email__c</fullName>
    <label>Administrator Email</label>
    <type>Email</type>
</CustomField>