force-app/main/default/objects/Google_Drive_Integration_Settings__c/fields/clientId__c.field-meta.xml
<CustomField>
    <fullName>clientId__c</fullName>
    <label>clientId</label>
    <length>200</length>
    <type>Text</type>
</CustomField>