force-app/main/default/objects/Google_Drive_Integration_Settings__c/fields/JWT_Access_Token__c.field-meta.xml
<CustomField>
    <fullName>JWT_Access_Token__c</fullName>
    <label>JWT Access Token</label>
    <length>200</length>
    <type>Text</type>
</CustomField>