force-app/main/default/objects/Google_Drive_Integration_Settings__c/fields/Opportunity_Root_Folder_ID__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Root_Folder_ID__c</fullName>
    <label>Opportunity Root Folder ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>