force-app/main/default/objects/Google_Drive_Integration_Settings__c/fields/Root_Folder_ID__c.field-meta.xml
<CustomField>
    <fullName>Root_Folder_ID__c</fullName>
    <label>Root Folder ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>